data/all_generated_tests/raw_wast_tests/nop_StackCorruption_138.wast
;; 9. **Test Description**:     Insert `nop` instructions in a function that utilizes indirect calls through a function table. Validate the stack to ensure `nop` doesn't affect indirect call indexes or stack consistency.    **Constraint**: Indirect function calls should work seamlessly with `nop`.    **Reasoning**: Ensures that `nop` does not cause stack corruption affecting indirect calls.

(assert_malformed
  (module
    (table 1 funcref)
    (elem (i32.const 0) $f)
    (func $f (nop) (nop))
    (func (call_indirect (type (func)) (i32.const 0))))
  "invalid value type in elem segment"
)